Archive2/d3/433f0f64ddeea9/output
main.cpp:5:11: error: '::main' must return 'int'
 void main()
           ^
main.cpp: In function 'int main()':
main.cpp:10:34: error: 'scanf_s' was not declared in this scope
     scanf_s("%s %s", name,surname); //_s bec of microsoft visual stduio. two seperate scanf_s work
                                  ^
main.cpp:11:36: error: cannot convert 'char**' to 'char*' for argument '1' to 'char* strcat(char*, const char*)'
     printf("%s",strcat(name,surname));
                                    ^
